--- a/RIDERCONNECT_APP/RiderConnect/index.html
+++ b/RIDERCONNECT_APP/RiderConnect/index.html
@@ -13,27 +13,28 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/riderConnectJs.js"></script>
 
+    <!--# Site developed by: vijith.pv, email:vijith5430@gmail.com -->
+
 </head>
 
 <body>
 
-    <div class="row">
+    <div class="row  clsDivHeader">
         <div class="col-lg-12 col-xs-12">
             <nav class="navbar navbar-default">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">imn studios</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li><a id="aIdHome" href="#" class="active" onclick="FnClickLink('aIdHome')">HOME</a></li>
-                    <li><a id="aIdContact" href="#" onclick="FnClickLink('aIdContact')">CONTACT</a></li>
-                    <li><a id="aIdAbout" href="#" onclick="FnClickLink('aIdAbout')">ABOUT US</a></li>
+                    <li ><a id="aIdHome" href="#" class="active" onclick="FnClickLink('aIdHome')">RIDER CONNECT</a></li>
+                    <li ><a id="aIdContact" href="#" onclick="FnClickLink('aIdContact')">CONTACT</a></li>
+                    <li style="display: none;"><a id="aIdAbout" href="#" onclick="FnClickLink('aIdAbout')">ABOUT US</a></li>
                 </ul>
 
 
             </nav>
 
         </div>
-
     </div>
 
     <div class="row clsDivContent">
@@ -62,8 +63,10 @@
             <br>
 
             <img class="clsContactImg" src="/img/ContactUs.jpg">
+
             <br>
             <br>
+
 
             <label class="clsLblContact">Email</label> : <label class="clsLblContactValue">
                 <i>contactriderconnect@gmail.com </i> </label>
@@ -72,7 +75,9 @@
             <label class="clsLblContact"> Phone</label> : <label class="clsLblContactValue"> +91 8907471155</label>
 
 
+
             <br>
+
 
             <br>
 
